--- a/docs/tutorials/rtk-query.mdx
+++ b/docs/tutorials/rtk-query.mdx
@@ -172,7 +172,7 @@ When making a request, you're able to track the state in several ways. You can a
 #### Basic Example
 
 <iframe
-  src="https://codesandbox.io/embed/getting-started-basic-17n8h?fontsize=12&hidenavigation=1&theme=dark"
+  src="https://githubbox.com/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/basic?fontsize=12&hidenavigation=1&theme=dark"
   style={{
     width: '100%',
     height: '500px',
