--- a/docs/rtk-query/usage/conditional-fetching.mdx
+++ b/docs/rtk-query/usage/conditional-fetching.mdx
@@ -20,8 +20,14 @@ Typescript users may wish to use [`skipToken`](../api/created-api/hooks.mdx#skip
 ### Example
 
 <iframe
-  src="https://codesandbox.io/embed/concepts-conditional-fetching-tdrz9?fontsize=12&hidenavigation=1&module=%2Fsrc%2FPokemon.tsx&moduleview=1&theme=dark"
-  style={{ width: '100%', height: '600px', border: 0, borderRadius: '4px', overflow: 'hidden' }}
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/conditional-fetching?fontsize=12&hidenavigation=1&module=%2Fsrc%2FPokemon.tsx&moduleview=1&theme=dark"
+  style={{
+    width: '100%',
+    height: '600px',
+    border: 0,
+    borderRadius: '4px',
+    overflow: 'hidden',
+  }}
   title="Conditional Fetching Example"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
