--- a/docs/rtk-query/usage/queries.mdx
+++ b/docs/rtk-query/usage/queries.mdx
@@ -216,7 +216,7 @@ Click the 'Add bulbasaur' button. You'll observe the same behavior described abo
 :::
 
 <iframe
-  src="https://codesandbox.io/embed/concepts-queries-deduping-caching-5qy3n?fontsize=12&hidenavigation=1&theme=dark"
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/deduping-caching?fontsize=12&hidenavigation=1&theme=dark"
   style={{
     width: '100%',
     height: '800px',
@@ -224,7 +224,7 @@ Click the 'Add bulbasaur' button. You'll observe the same behavior described abo
     borderRadius: '4px',
     overflow: 'hidden',
   }}
-  title="rtk-query-react-hooks-example"
+  title="RTK Query - Basic query deduplication example"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
