--- a/docs/rtk-query/usage/polling.mdx
+++ b/docs/rtk-query/usage/polling.mdx
@@ -44,7 +44,7 @@ queryRef.updateSubscriptionOptions({ pollingInterval: 0 })
 ### Example
 
 <iframe
-  src="https://codesandbox.io/embed/concepts-polling-gorpg?fontsize=12&hidenavigation=1&theme=dark"
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/feature/v1.6-integration/examples/query/react/polling?fontsize=12&hidenavigation=1&theme=dark"
   style={{
     width: '100%',
     height: '600px',
